syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "EquipParam.proto";

message GetMailItemRsp {
  int32 retcode = 1;
  repeated uint32 mail_id_list = 2;
  repeated EquipParam item_list = 3;
}
